[gd_scene load_steps=3 format=2]

[ext_resource path="res://images/pipe_bent.png" type="Texture" id=1]
[ext_resource path="res://pipes2/PipeTile.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="ColorRect1" type="ColorRect" parent="Button"]
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 1

[node name="ColorRect2" type="ColorRect" parent="Button"]
margin_left = 2.0
margin_top = 2.0
margin_right = 98.0
margin_bottom = 98.0
mouse_filter = 1
color = Color( 0.152941, 0.0862745, 0.0862745, 1 )

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 50, 50 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="MoveTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Tile_pressed"]
[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_MoveTween_all_completed"]
